// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-customer-email Renders the logged in customer email when the customer is logged in 1`] = `
<sc-customer-email size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="email" disabled="" exportparts="base, input, form-control, label, help-text, prefix, suffix" help="" name="email" required="" type="email" value="customer-21@example.com"></sc-input>
  </mock:shadow-root>
</sc-customer-email>
`;

exports[`sc-customer-email Renders the url email when the customer is not logged in 1`] = `
<sc-customer-email size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="email" exportparts="base, input, form-control, label, help-text, prefix, suffix" help="" name="email" required="" type="email" value="johndoe@gmail.com"></sc-input>
  </mock:shadow-root>
</sc-customer-email>
`;

exports[`sc-customer-email renders 1`] = `
<sc-customer-email size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="email" exportparts="base, input, form-control, label, help-text, prefix, suffix" help="" name="email" required="" type="email"></sc-input>
  </mock:shadow-root>
</sc-customer-email>
`;
